# GraniteLedger

./: .coveragerc  .env.example  CONTRIBUTING.md  Makefile  README.md  README_QA_SNIPPET.md  TEST_PLAN.md  conftest.py  pyproject.toml  pytest.ini  run.py  test_discovery_summary.json
.github/workflows/: ci.yml  qa.yml
ForgeCore/forgecore/: admin_api.py  loader.py
ForgeCore/forgecore/tests/: test_admin_api.py
api/routes/: intake_email.py
graniteledger/integrations/gmail_intake/: README.md  __init__.py  cli.py  config.py  gmail_client.py  models.py  normalizer.py  parser.py  pipeline.py  pubsub_server.py  service.py  state.py
modules/events_log/: entry.py  module.json
modules/orders_core/: entry.py  models.py  module.json  service.py
modules/printing_service/: entry.py  module.json
modules/shipping_rules/: entry.py  module.json
modules/status_dashboard/: entry.py  module.json
modules/status_dashboard/static/: app.js  index.html  (+1 more)
modules/test_kits/: entry.py  module.json
modules/volusion_webhook/: entry.py  module.json  normalizer.py
scripts/: dev_setup.sh  run_gmail_watch.sh
tests/: conftest.py  test_batch_ops.py  test_order_flow.py  test_printing_flows.py  test_shipping_rules.py  test_validation_and_logging.py  test_webhook_idempotency.py
tests/fixtures/: sample.csv
tests/fuzz/: test_normalizer_fuzz.py
tests/integration/: test_order_flow.py  test_shipping_rules.py  test_webhook_idempotency.py
tests/property/: test_normalizer_property.py
tests/resources/: sample_payload.json
tests/unit/: test_normalizer.py  test_shipping_rules_module.py
(+10 files in other folders)
